# EV-Site-Analyzer

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  requirements.txt  run_api.py  start.sh
Score model/: EV_Charging_Ahmedabad_Gandhinagar_1000_highscores.csv  ev_site_model.pkl  train_model.py
alembic/: env.py
alembic/versions/: 0002_ev_analyzer_schema.py
data_pipeline/: fetch_osm_data.py  generate_sample_data.py  seed_database.py
data_pipeline/csv_exports/: demographic.csv  demographic_real.csv  environmental.csv  environmental_real.csv  land_use.csv  land_use_real.csv  pois.csv  pois_real.csv  roads.csv  roads_real.csv
data_pipeline/csv_exports/new/: city_boundaries.csv  ev_adoption_zones.csv  ev_stations.csv  fuel_stations.csv  highway_corridors.csv  (+4 more)
data_pipeline/geojson/: ahmedabad_demographic.geojson  ahmedabad_environmental.geojson  ahmedabad_land_use.geojson  ahmedabad_pois.geojson  city_boundaries.geojson  ev_adoption_zones.geojson  ev_stations_sample.geojson  fuel_stations.geojson  fuel_stations_sample.geojson  highway_corridors.geojson  highway_corridors_sample.geojson  income_zones.geojson  parking.geojson  population_zones.geojson  rest_stops.geojson  rest_stops_sample.geojson  risk_zones.geojson
data_pipeline/osm_extract/: gujarat-latest.osm.pbf
frontend/: app.js  index.html  style.css
frontend/tests/: app.test.js
sample_data/: sample_demographic.geojson  sample_land_use.geojson  sample_pois.geojson
src/geo_analyzer/: api.py  ev_scoring.py  ml_scorer.py  models.py
(+3 files in other folders)
